Coverity analysis defect 184205: Pointer to local outside scope

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Server Security
    • Fully Compatible
    • ALL
    • Server Security 2026-01-16, Server Security 2026-01-30
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Pointer to local outside scope

      Dereferencing the returned or out-of-scope stack pointer will access an invalid location on the stack after its scope or after the function returns. Pointer to a local stack variable returned or used outside scope
      /src/mongo/util/net/ssl_manager_openssl.cpp:911: RETURN_LOCAL 184205 Address of temporary holding "mongo::str::stream()".
      /src/mongo/util/net/ssl_manager_openssl.cpp:911: RETURN_LOCAL 184205 Assigning: "stream" = "mongo::str::stream() << "Failed to query the OCSP responder - "".
      /src/mongo/util/net/ssl_manager_openssl.cpp:911: RETURN_LOCAL 184205 Temporary variable of type "mongo::str::stream" goes out of scope.
      /src/mongo/util/net/ssl_manager_openssl.cpp:914: RETURN_LOCAL 184205 Using "stream", which points to an out-of-scope temporary variable of type "mongo::str::stream".

            Assignee:
            Erwin Pe
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: