SERVER-116180 Fix pointer to local outside scope Coverity defect (#46586)

GitOrigin-RevId: 7edb2d832955374d2c016b84d8d01947e6c7e4c5